--- a/line.css
+++ b/line.css
@@ -46,7 +46,7 @@
 	margin-top: 0px;
 	width: 50px;
 	float: left;
-	overflow: hidden;
+	/* overflow: hidden; */
 	border-right: 1px solid #c0c0c0;
 	margin-right: 10px;
 }
