--- a/main.css
+++ b/main.css
@@ -2,10 +2,91 @@
   box-sizing: border-box;
 }
 body {
-  background: chocolate;
   font-family: monospace;
+  background: #333;
+  color: darkgray;
+  font-size: 80%;
 }
 textarea {
   width: 50vw;
   height: 50vh;
+}
+img {
+  width: calc(auto * 0.8);
+  height: calc(auto * 0.8);
+}
+aside {
+  padding: 0;
+  margin: 1px;
+}
+nav {
+  display: inline;
+  margin: 0;
+  padding: 5px 0 5px 30px;
+}
+a {
+  color: #0066ff;
+  text-decoration: none;
+}
+nav a {
+  margin-right: 20px;
+}
+.nowrap {
+  white-space: nowrap;
+}
+a:hover {
+  text-decoration: underline;
+}
+a:active {
+  color: #003366;
+}
+details {
+  width: 620px;
+  box-shadow: 3px 3px 4px black;
+}
+details > summary {
+  padding: 2px 6px;
+  width: inherit;
+  background: #999;
+  border: none;
+  cursor: pointer;
+  list-style: none;
+  outline: none;
+  font-size: 1.15em;
+}
+details > summary::-webkit-details-marker {
+  display: none;
+}
+details > summary::after {
+  background: #cc3333;
+  border-color: #cc3333;
+  border-radius: 15px;
+  content: "?";
+  color: #666;
+  float: left;
+  font-size: 1em;
+  font-weight: bold;
+  margin: -2px 10px 0 0;
+  padding: 1px 0 3px 0;
+  text-align: center;
+  width: 30px;
+}
+details > div {
+  border-radius: 0 0 10px 10px;
+  width: inherit;
+  background: #999;
+  padding: 2px 6px;
+  margin: 0;
+  box-shadow: 4px 4px 3px black;
+}
+details[open] > summary::after {
+  content: "!";
+}
+dfn {
+  text-decoration: underline dotted;
+  font-style: normal;
+  font-weight: bolder;
+}
+button {
+  font-family: inherit;
 }
